--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,12 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 
 # DataSource configuration
-spring.datasource.url=mysql://root:XELbexRMIXuQpxiZaypmlrjRSlqlCVrb@viaduct.proxy.rlwy.net:38002/railway
-
+# DataSource configuration
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:38002/railway?autoReconnect=true&connectTimeout=10000&socketTimeout=10000
 spring.datasource.username=root
 spring.datasource.password=XELbexRMIXuQpxiZaypmlrjRSlqlCVrb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 # Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
